fixed height so that footer doesn't overflow

--- a/components/logo-animation.module.css
+++ b/components/logo-animation.module.css
@@ -1,5 +1,5 @@
 .logoPath {
-  width: 100%;
+  width: fit-content;
   height: 100%;
 }
 
